core/tests/snapshots/run_scripts__strings.snap
---
source: core/tests/run_scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (strings), \".rain\"))"
---
Ok
Boolean(
    true,
)
