core/tests/snapshots/run_scripts__trailing_commas.snap
---
source: core/tests/run_scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (trailing_commas), \".rain\"))"
---
Ok
Integer(
    RainInteger(
        24,
    ),
)
