core/tests/snapshots/run_scripts__type_checks.snap
---
source: core/tests/run_scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (type_checks), \".rain\"))"
---
Ok
Integer(
    RainInteger(
        6,
    ),
)
