core/tests/snapshots/run_scripts__unary_operators.snap
---
source: core/tests/run_scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (unary_operators), \".rain\"))"
---
Ok
List(
    RainList(
        [
            Boolean(
                false,
            ),
            Boolean(
                false,
            ),
            Boolean(
                false,
            ),
        ],
    ),
)
