core/tests/snapshots/run_scripts__underscore.snap
---
source: core/tests/run_scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (underscore), \".rain\"))"
---
Ok
Integer(
    RainInteger(
        1,
    ),
)
