core/tests/snapshots/run_scripts__utf8.snap
---
source: core/tests/run_scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (utf8), \".rain\"))"
---
Ok
String(
    "rain",
)
